tests/semantic_analysis/error/missing_arg.c
missing_arg\.c:4:8: error:.*